--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_CLIENT_ID="YOUR_CLIENT_ID"
-REACT_APP_GITHUB_CLIENT_SECRET="ADD_YOUR_SECRET"
+VITE_GITHUB_CLIENT_ID="YOUR_CLIENT_ID"
+VITE_GITHUB_CLIENT_SECRET="ADD_YOUR_SECRET"
